# soar-sdk

./: .gitignore  ConnectorsOverflow.config  DummyManager.py  FileRetentionManager.py  MockConnector.py  MockRunner.py  OverflowManager.py  OverflowMockConnector.py  PermittedAlertTime.py  PhishinEmail1.py  PythonScriptTemplate.py  ScriptResult.py  ScriptingLogging.config  Siemplify.py  SiemplifyAction.py  SiemplifyBase.py  SiemplifyBaseDataModel.py  SiemplifyCaseWallDataModel.py  SiemplifyConnectors.py  SiemplifyConnectorsDataModel.py  SiemplifyDataModel.py  SiemplifyJob.py  SiemplifyLogger.py  SiemplifyPublisherUtils.py  SiemplifySdkConfig.py  SiemplifyUtils.py  SiemplifyVault.py  SiemplifyVaultCyberArkPam.py  SiemplifyVaultUtils.py  SimulatedCasesCreator.py  VaultProviderFactory.py  external_providers.json  mock_action_data.json  mock_case_data.json  mock_connector_data.json  mock_std_in.txt  old.py  pyproject.toml  ruff.toml
docs/: code-of-conduct.md
src/soar_sdk/: CaseAlertsProvider.py  ConnectorsOverflow.config  FileRetentionManager.py  GcpTokenProvider.py  OverflowManager.py  PersistentFileStorageMixin.py  ScriptResult.py  ScriptingLogging.config  (+24 more)
tests/: README.md  siemplify_action_mock.json  test_gcp_token_provider.py  test_persistent_file_storage_mixin.py  test_siemplify.py  test_siemplify_action.py  test_siemplify_address_provider.py  test_siemplify_base.py  test_siemplify_connectors.py  test_siemplify_job.py  test_siemplify_logger.py  test_siemplify_sdk_config.py  test_siemplify_transformer.py  test_siemplify_utils.py  test_siemplify_vault_utils.py
