[project]
name = "soar-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arrow>=1.3.0",
    "chardet>=5.2.0",
    "cryptography>=44.0.3",
    "google-auth>=2.22.0",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "requests-toolbelt>=1.0.0",
    "six>=1.15.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]
