[project]
name = "soar-sdk"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arrow>=0.17.0",
    "chardet>=4.0.0",
    "cryptography>=44.0.1",
    "google-auth>=2.22.0",
    "pyopenssl>=25.0.0",
    "python-dateutil>=2.8.2",
    "pytz>=2022.1",
    "requests>=2.32.2",
    "requests-toolbelt>=0.10.1",
    "six>=1.15.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

